--- a/src/app/features/market/containers/market-page.component.html
+++ b/src/app/features/market/containers/market-page.component.html
@@ -8,32 +8,53 @@
         <p class="alexa-text">
           Löst den BFF-Alexa-Endpunkt aus und liest die aktuellen Marktpreise oder ein einzelnes Asset.
         </p>
-        <div class="alexa-actions">
-          <button class="btn btn-primary" (click)="onAlexaAll()" [disabled]="alexaLoading">
-            Alle Marktpreise
+
+        <div class="alexa-grid">
+          <button
+            class="btn btn-secondary alexa-full-btn"
+            (click)="onAlexaAll()"
+            [disabled]="alexaLoading">
+            Alle Marktpreise abrufen
           </button>
-          <div class="alexa-input-group">
+
+          <div class="alexa-row">
             <input
               class="form-control"
               type="text"
               placeholder="z. B. Gold, BTC, ETH"
-              [(ngModel)]="alexaAsset"
-            />
-            <button class="btn btn-secondary" (click)="onAlexaSingle()" [disabled]="alexaLoading">
+              [(ngModel)]="alexaAsset" />
+            <button
+              class="btn btn-secondary"
+              (click)="onAlexaSingle()"
+              [disabled]="alexaLoading">
               Einzelnes Asset
             </button>
           </div>
-          <button class="btn btn-secondary" type="button" (click)="onAlexaRepeat()" [disabled]="!alexaOutput">
-            Noch einmal abspielen
-          </button>
-          <button class="btn btn-tertiary" type="button" (click)="onAlexaStopSpeech()" [disabled]="!isSpeaking">
-            Sprachausgabe stoppen
-          </button>
+
+          <div class="alexa-row alexa-row-split">
+            <button
+              class="btn btn-secondary"
+              type="button"
+              (click)="onAlexaRepeat()"
+              [disabled]="!alexaOutput">
+              Noch einmal abspielen
+            </button>
+            <button
+              class="btn btn-secondary"
+              type="button"
+              (click)="onAlexaStop()"
+              [disabled]="!alexaSpeaking">
+              Sprachausgabe stoppen
+            </button>
+          </div>
         </div>
       </div>
+
       <div class="alexa-right">
+        <div class="alexa-output-title">Alexa Antwort</div>
+
         <div *ngIf="alexaLoading" class="alexa-loading">
-          Wird abgefragt.
+          Wird abgefragt...
         </div>
         <div *ngIf="alexaError" class="alexa-error">
           {{ alexaError }}
