--- a/src/app/features/portfolio/containers/portfolio-page.component.scss
+++ b/src/app/features/portfolio/containers/portfolio-page.component.scss
@@ -168,7 +168,7 @@
 
 .portfolio-table th {
   padding: 0.7rem 0.65rem;
-  text-align: left;
+  text-align: right;
   font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 0.04em;
