--- a/src/app/features/admin/containers/admin-users.component.scss
+++ b/src/app/features/admin/containers/admin-users.component.scss
@@ -69,6 +69,10 @@
   color: #fff;
 }
 
+tr {
+  background: #00000059;
+}
+
 .table-scroller {
   width: 100%;
   overflow-x: auto;
@@ -98,7 +102,7 @@
 
 .td-num,
 .th-num {
-  text-align: right;
+  text-align: left;
 }
 
 .td-actions,
@@ -117,9 +121,9 @@
   display: inline-flex;
   align-items: center;
   gap: 0.3rem;
-  padding: 0.3rem 0.7rem;
+  padding: .4rem .8rem;
+  font-size: 1rem;
   border-radius: 9999px;
-  font-size: 0.7rem;
   letter-spacing: 0.01em;
 }
 
@@ -163,8 +167,8 @@
 }
 
 .btn-sm {
-  padding: 0.4rem 0.8rem;
-  font-size: 0.7rem;
+  padding: .4rem .8rem;
+  font-size: 1rem;
 }
 
 .btn-primary {
