--- a/src/app/features/admin/containers/admin-users.component.scss
+++ b/src/app/features/admin/containers/admin-users.component.scss
@@ -79,6 +79,11 @@
   border: 1px solid rgba(255, 255, 255, .04);
   border-radius: .75rem;
   transition: all .15s ease;
+  padding: .6rem .65rem;
+  vertical-align: middle;
+  font-size: 1rem;
+  line-height: 1.3;
+  text-align: right;
 }
 
 .table-scroller {
@@ -94,7 +99,7 @@
 
 .portfolio-table thead th {
   padding: .7rem .65rem;
-  text-align: right;
+  text-align: left;
   font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: .04em;
