--- a/src/app/features/admin/containers/admin-users.component.scss
+++ b/src/app/features/admin/containers/admin-users.component.scss
@@ -60,6 +60,10 @@
   transition: all 0.15s ease;
 }
 
+.users-table tbody tr:hover {
+  background: rgba(0, 0, 0, 0.28);
+}
+
 .users-table tbody tr td:first-child {
   border-top-left-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
