--- a/src/app/features/admin/containers/admin-users.component.scss
+++ b/src/app/features/admin/containers/admin-users.component.scss
@@ -1,14 +1,18 @@
 .admin-page {
   display: flex;
+  font-family: 'Inter', sans-serif;
   flex-direction: column;
   gap: 1rem;
   padding: 1.5rem 1.25rem 2.5rem;
+  color: #eee;
+  font-size: 1rem;
 }
 
 .portfolio-title {
   font-size: 1.9rem;
   font-weight: 600;
   margin-bottom: .7rem;
+  color: #eee;
 }
 
 .loading-block {
@@ -148,9 +152,9 @@
 }
 
 .table-title {
-  font-size: 1.15rem;
+  font-size: 1.4rem;
   font-weight: 600;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1rem;
   color: #fff;
 }
 
