changes to admin table header 3

--- a/src/app/features/admin/containers/admin-users.component.html
+++ b/src/app/features/admin/containers/admin-users.component.html
@@ -27,9 +27,9 @@
         <table class="portfolio-table users-table">
           <thead>
           <tr class="table-header">
-            <th>Vorname</th>
-            <th>Nachname</th>
-            <th>E-Mail</th>
+            <th class="th-left">Vorname</th>
+            <th class="th-left">Nachname</th>
+            <th class="th-left">E-Mail</th>
             <th>Rolle</th>
             <th>Status</th>
             <th class="th-num">Guthaben</th>
