--- a/src/app/features/admin/containers/admin-users.component.scss
+++ b/src/app/features/admin/containers/admin-users.component.scss
@@ -378,6 +378,10 @@
   transform: translateY(-2px) scale(1.01);
 }
 
+.th-left {
+  text-align: left;
+}
+
 .info-icon {
   width: 22px;
   height: 22px;
